fixed the overflow issue, the body was still registering the prefabricated li made by the requestAnimationFrame() function, so I applied the overflow-x:hidden to the body and now the bottom scroll doesnt appear on transitions

--- a/NowFlix/CSS/base.css
+++ b/NowFlix/CSS/base.css
@@ -14,6 +14,9 @@
 ul {
   list-style: none;
 }
+body {
+  overflow-x: hidden;
+}
 
 button {
   border: none;
@@ -29,4 +32,7 @@ button {
 .browse-container {
   background-color: rgba(28, 217, 84, 0.5) !important;
   z-index: 1000 !important;
+} */
+/* hr {
+  width: 100%;
 } */
