--- a/NowFlix/CSS/hero.css
+++ b/NowFlix/CSS/hero.css
@@ -26,7 +26,9 @@
 .hero-arrow-left:hover {
   scale: 1.2;
 }
-
+.hero-backdrop-list {
+  overflow: hidden;
+}
 .backdrop-li {
   position: absolute;
   top: 0;
